(fix) Add in spacing to handle navbar

--- a/client/style/scss/base/_setup.scss
+++ b/client/style/scss/base/_setup.scss
@@ -3,6 +3,10 @@
 //   padding-top: 70px;
 // }
 
+.navbarSpacing {
+  padding-top: 70px;
+}
+
 html {
     height: 100%;
     position: relative;
